fix: Some minor fixes
- Update `globals.css` file to fix `heroButton` and `contactInput` style
- Refactor `gray-light` custom color from `tailwind.config.ts` file into `green-light`
- Add new custom colors to `tailwind.config.ts`: `gray-light` and `gray-card`
- Fix `About` component on small devices
- Implement `ChevronButton` component
- Update `DarkModeButton` style
- Update `ExperienceCard` image size
- Fix color to `Header` component link
- Fix double scrollbar from `Projects` component

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,10 @@
 
 @layer components {
   .heroButton {
-      @apply bg-gray-light hover:bg-green-dark/5 dark:bg-gray-dark px-4 sm:px-6 mr-1 mt-2 sm:mt-0 py-2 border-gray-light dark:border-gray-dark rounded-full uppercase text-xs tracking-widest dark:text-gray-500 text-white transition-all hover:border-green/40 dark:hover:text-green hover:text-green border-2 
+      @apply bg-green-light hover:bg-green-dark/5 dark:bg-gray-dark px-4 sm:px-6 mr-1 mt-2 sm:mt-0 py-2 rounded-full uppercase text-xs tracking-widest dark:text-gray-500 text-white transition-all dark:hover:text-green hover:text-green 
   }
   
   .contactInput {
-      @apply outline-none dark:bg-slate-400/10 bg-green-dark rounded-md border-b px-6 py-4 dark:border-gray-dark border-green-dark dark:text-gray-500 text-white dark:placeholder-gray-500 placeholder-white transition-all focus:border-green dark:focus:text-green focus:text-gray-dark hover:border-green
+      @apply outline-none dark:bg-slate-400/10 bg-green-dark rounded-md border-b px-6 py-4 dark:border-gray-dark border-green-dark dark:text-gray-500 text-white dark:placeholder-gray-500 placeholder-white transition-all focus:border-green dark:focus:text-green focus:text-gray-300 hover:border-green dark:hover:border-green
   }
 }
